# hairobo_ros2_laptop

./: .gitignore  README.md  hairobo_setup.sh  package-lock.json  package.json  ros2_video_dummy.sh  ros2start.sh  ros2start_all.sh  ros2start_ideapad_only.sh  ros2start_rpi.sh  rvizstart.sh  spec.md  template.md  test_camera_simple.py  todo.md
.github/instructions/: general.instructions.md
hairobo-webui/: index.html  package-lock.json  package.json
hairobo-webui/server/: timer-server.js
hairobo-webui/src/: App.tsx  index.css
hairobo-webui/src/api/: timer.ts
hairobo-webui/src/components/: ControlPanel.tsx  StatusPanel.tsx  toggle.tsx
hairobo-webui/src/components/buttons/: power.tsx
hairobo-webui/src/components/controls/: Cervo.tsx  PidGain.tsx  power.tsx
hairobo-webui/src/components/status/: Battery.tsx  BrushCommand.tsx  Encoder_L.tsx  Encoder_R.tsx  GamepadVisualizer.tsx  OperationMode.tsx  RosConnection.tsx  WinchChild.tsx  WinchLan.tsx
hairobo-webui/src/components/ui/: CameraModal.tsx  TimerBar.tsx  status.tsx  title.tsx  toggle.tsx
hairobo-webui/src/components/video/: ChildFrontCamera.tsx  LidarViewer.tsx  ParentFrontCamera.tsx  ParentRearCamera.tsx  useCompressedImage.tsx
hairobo-webui/src/hooks/: useTimerSync.ts
hairobo_react_app/: package-lock.json  package.json
hairobo_react_app/src/: App.css  App.js  App.tsx  index.css
hairobo_react_app/src/components/: Camera.css  CameraData.js  ChildFrontCamera.js  ChildFrontCamera.tsx  LidarViewer.js  LidarViewer.tsx  ParentFrontCamera.js  ParentFrontCamera.tsx  ParentRearCamera.js  ParentRearCamera.tsx  RosConnection.js  RosConnection.tsx
src/hairobo_bringup/: CMakeLists.txt  package.xml
src/hairobo_bringup/launch/: bringup.launch.py  bringup.launch.xml
src/hairobo_config/: fastdds_profile.xml
src/hairobo_controller/: CMakeLists.txt  package.xml
src/hairobo_controller/src/: dualshock4_node.cpp
src/hairobo_driver/: CMakeLists.txt  package.xml
src/hairobo_driver/launch/: dualshock4.launch.py
src/hairobo_driver/src/: dualshock4_node.cpp
src/hairobo_interfaces/: CMakeLists.txt  package.xml
src/hairobo_launch/: CMakeLists.txt  package.xml
src/hairobo_launch/launch/: .gitkeep
src/hairobo_msgs/: CMakeLists.txt  README.md  package.xml
src/hairobo_msgs/msg/: OperationMode.msg  RecoveryCommand.msg  RobotStatus.msg
src/hairobo_msgs/srv/: SetOperationMode.srv
src/hairobo_rviz/: CMakeLists.txt  package.xml
src/hairobo_rviz/config/: slam.rviz  ydlidar.rviz
src/hairobo_rviz/launch/: ydlidar_view.launch.xml
src/hairobo_sensors/: CMakeLists.txt  package.xml
src/hairobo_simulation/: CMakeLists.txt  package.xml
src/hairobo_teleop/: CMakeLists.txt  CONTROLLER_README.md  README.md  package.xml
src/hairobo_teleop/config/: controller_config.yaml
src/hairobo_teleop/launch/: teleop.launch.py  teleop.launch.xml
src/hairobo_teleop/src/: teleop_logic_node.cpp
src/hathaway_video_dummy/: CMakeLists.txt  README.md  package.xml
src/hathaway_video_dummy/launch/: hathaway_publisher.launch.py
src/hathaway_video_dummy/src/: hathaway_publisher.cpp
src/koji_dummy/: CMakeLists.txt  package.xml
src/koji_dummy/include/hathaway_video_dummy/: hathaway_publisher.hpp
src/koji_dummy/include/koji_dummy/: koji_publisher.hpp
src/koji_dummy/launch/: koji_dummy.launch.py
src/koji_dummy/src/: koji_dummy.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/rviz_config/: CMakeLists.txt  package.xml
src/teleop_logic_node/: CMakeLists.txt  package.xml
src/test_camera/: CMakeLists.txt  package.xml
src/test_camera/launch/: camera.launch.py
src/test_camera/src/: camera_publisher.cpp
src/video_dummy/: CMakeLists.txt  README.md  package.xml
src/video_dummy/include/video_dummy/: video_dummy_node.hpp
src/video_dummy/launch/: video_dummy.launch.xml
src/video_dummy/src/: video_dummy_node.cpp
task_log/: 2025-09-11_2219_package-naming-standardization.md  2025-09-11_2234_teleop-logic-node-implementation.md  2025-09-11_package-xml-dependencies.md  2025-09-11_project-setup-and-package-organization.md  format.md
task_log/2025-09-11/: 2025-09-11_2157_project-setup-and-package-organization.md  2025-09-11_2203_package-xml-dependencies.md  2025-09-11_2219_package-naming-standardization.md  2025-09-11_2234_teleop-logic-node-implementation.md  20250911_235800_パッケージクリーンアップ.md
task_log/2025-09-12/: 2025-09-12_2130_コントローラーボタン番号変数化.md
task_log/2025-09-24/: 2025-09-24_1121_Cartographer_SLAM要件定義追加.md
