<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hairobo_launch</name>
  <version>1.0.0</version>
  <description>Launch files and configurations for Hairobo remote control robot system</description>
  <maintainer email="keikei12261226@gmail.com">amuratakamitamu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system dependencies -->
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <exec_depend>launch_xml</exec_depend>
  <exec_depend>launch_yaml</exec_depend>
  
  <!-- Core ROS 2 packages for launching -->
  <exec_depend>joy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <!-- Project packages -->
  <exec_depend>hairobo_msgs</exec_depend>
  <exec_depend>hairobo_driver</exec_depend>
  <exec_depend>hairobo_teleop</exec_depend>
  <exec_depend>hairobo_sensors</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
