<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hairobo_teleop</name>
  <version>1.0.0</version>
  <description>Teleop logic node for Hairobo remote control robot system</description>
  <maintainer email="keikei12261226@gmail.com">amuratakamitamu</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclcpp</depend>
  
  <!-- Message dependencies -->
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Custom message dependencies -->
  <depend>hairobo_msgs</depend>
  
  <!-- Joy package for joystick input -->
  <depend>joy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
